# demo-todo-app

./: .dockerignore  Cargo.toml  Dockerfile  README.md
kubernetes/: kustomization.yaml  postgres-deployment.yaml  postgres-secret.yaml  postgres-service.yaml  todo-app-configmap.yaml  todo-app-deployment.yaml  todo-app-service.yaml
src/: lib.rs  main.rs
src/templates/: index.html
src/todo/: handlers.rs  model.rs  repository.rs  service.rs  web_handlers.rs
src/utils/: env.rs  state.rs
