[package]
name = "todo-app-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = "1.0.140"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
